Fixed nav spacing on mobile

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -1,7 +1,5 @@
 .page
     margin-top: $header-margin-top
-    @media #{$mobile}
-        margin-top: 110px
     > h1
         text-align: center
         margin-bottom: 1rem
